OnClick functionality for delete buttons in delete-internal-link-modal - Remove item from list when deleting a single item - Delete linked note by utilizing `app.vault.delete` - Updated delete-internal-link-modal styling     - Make sure long pathnames are trunctated     - Prevent seeing rows scrolling behind user-control

--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,28 @@
     stroke-width: 10px;
 }
 
+.delete-internal-link-modal {
+    padding-bottom: 0;
+}
+
+.delete-internal-link-item-row {
+    display: flex;
+    flex: 1 1 auto;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.75em 0;
+}
+
+.delete-internal-link-item-row-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    text-align: left;
+}
+
 .delete-internal-link-button {
     background-color: #FF3333 !important;
+    margin-left: 0.75em;
 }
 
 .delete-internal-link-button:hover {
@@ -37,7 +57,7 @@
 .delete-internal-links-user-control {
     display: flex;
     justify-content: space-between;
-    padding-top: 0.75em;
+    padding: 0.75em 0;
     border-top: 1px solid var(--background-modifier-border);
     position: sticky;
     bottom: 0;
